# fast-qdot

./: .gitignore  CMakeLists.txt  fast-qdot.cpp  fast-qdot.h
benchmarks/: bench_main.cpp  bench_matvec.cpp  bench_procedural_lut.cpp
scripts/: benchmark_plot.py  dot_comparison_plot.py  matvec_plot.py  roofline_plot.py
src/: lut.cpp  lut.h  mad.cpp  mad.h  mad_avx2.cpp  mad_avx2.h  naive.cpp  naive.h  procedural_lut.cpp  procedural_lut.h
tests/: test_lut.cpp  test_lut_generic.cpp  test_mad.cpp  test_mad_avx2.cpp  test_main.cpp  test_matvec.cpp
